MRT Performance with conflict mrts